changed color style

--- a/Images/Images/Storyboard/ImageCollectionViewController.storyboard
+++ b/Images/Images/Storyboard/ImageCollectionViewController.storyboard
@@ -24,7 +24,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="imageCollectionView" id="nvR-CH-ANp" customClass="ImageCollectionViewCell" customModule="Images" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" misplaced="YES" reuseIdentifier="imageCollectionView" id="nvR-CH-ANp" customClass="ImageCollectionViewCell" customModule="Images" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="2" width="283" height="172"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -32,11 +32,11 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aY2-ec-WB0">
-                                            <rect key="frame" x="10" y="0.0" width="261" height="172"/>
+                                            <rect key="frame" x="10" y="0.0" width="206" height="0.0"/>
                                         </imageView>
                                         <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="MMV-n2-aI5">
-                                            <rect key="frame" x="123" y="67.5" width="37" height="37"/>
-                                            <color key="color" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <rect key="frame" x="95.5" y="-18.5" width="37" height="37"/>
+                                            <color key="color" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                                         </activityIndicatorView>
                                     </subviews>
                                 </view>
