--- a/Images/Images/Storyboard/DetailImage.storyboard
+++ b/Images/Images/Storyboard/DetailImage.storyboard
@@ -43,7 +43,7 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="ZJF-nz-c3j"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                                 <state key="normal" title="Done"/>
                                 <connections>
                                     <action selector="done:" destination="qYG-6m-VhN" eventType="touchUpInside" id="WZ3-JS-sm9"/>
@@ -51,7 +51,7 @@
                             </button>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="ETv-gh-k2k">
                                 <rect key="frame" x="169" y="315" width="37" height="37"/>
-                                <color key="color" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="color" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
