--- a/Images/Images/Storyboard/ImageViewController.storyboard
+++ b/Images/Images/Storyboard/ImageViewController.storyboard
@@ -110,22 +110,30 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="266"/>
                                 <color key="backgroundColor" red="0.22102877500000001" green="0.76200133560000005" blue="0.84233474730000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0un-16-oP2">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="H1M-TR-gbN" firstAttribute="top" secondItem="9c9-WG-hgN" secondAttribute="bottom" id="1mX-Ag-kLB"/>
+                            <constraint firstItem="0un-16-oP2" firstAttribute="top" secondItem="umi-wv-8HL" secondAttribute="top" id="3i5-Vx-13H"/>
                             <constraint firstItem="H1M-TR-gbN" firstAttribute="top" secondItem="6cP-V6-eD9" secondAttribute="bottom" id="7y8-k5-7l7"/>
                             <constraint firstItem="KH4-IR-CVc" firstAttribute="trailing" secondItem="H1M-TR-gbN" secondAttribute="trailing" id="8Hs-PB-dK6"/>
                             <constraint firstItem="H1M-TR-gbN" firstAttribute="leading" secondItem="KH4-IR-CVc" secondAttribute="leading" id="Hac-Ln-fUr"/>
                             <constraint firstItem="6cP-V6-eD9" firstAttribute="width" secondItem="umi-wv-8HL" secondAttribute="width" id="Jhx-9Q-O2h"/>
                             <constraint firstItem="j0g-xs-tP2" firstAttribute="centerX" secondItem="KH4-IR-CVc" secondAttribute="centerX" id="LQd-lk-YfH"/>
                             <constraint firstItem="j0g-xs-tP2" firstAttribute="top" secondItem="KH4-IR-CVc" secondAttribute="top" id="LUg-3N-JFU"/>
+                            <constraint firstAttribute="bottom" secondItem="0un-16-oP2" secondAttribute="bottom" id="NW9-SM-ba1"/>
                             <constraint firstItem="xIE-UK-YMh" firstAttribute="top" secondItem="j0g-xs-tP2" secondAttribute="bottom" constant="4" id="Njv-Yq-5h6"/>
                             <constraint firstItem="6cP-V6-eD9" firstAttribute="top" secondItem="umi-wv-8HL" secondAttribute="top" id="R05-ld-hwW"/>
                             <constraint firstItem="6cP-V6-eD9" firstAttribute="height" secondItem="umi-wv-8HL" secondAttribute="height" multiplier="3/7" id="SGm-uJ-g5o"/>
                             <constraint firstItem="9c9-WG-hgN" firstAttribute="leading" secondItem="KH4-IR-CVc" secondAttribute="leading" id="YRw-uO-RtC"/>
                             <constraint firstItem="6cP-V6-eD9" firstAttribute="leading" secondItem="KH4-IR-CVc" secondAttribute="leading" id="eeb-oa-dmU"/>
                             <constraint firstItem="6cP-V6-eD9" firstAttribute="trailing" secondItem="KH4-IR-CVc" secondAttribute="trailing" id="hv1-qs-MPE"/>
+                            <constraint firstAttribute="trailing" secondItem="0un-16-oP2" secondAttribute="trailing" id="lhA-oc-DVX"/>
+                            <constraint firstItem="0un-16-oP2" firstAttribute="leading" secondItem="umi-wv-8HL" secondAttribute="leading" id="wB9-fx-9Qr"/>
                             <constraint firstItem="9c9-WG-hgN" firstAttribute="trailing" secondItem="KH4-IR-CVc" secondAttribute="trailing" id="wQ4-6u-Fj1"/>
                             <constraint firstItem="9c9-WG-hgN" firstAttribute="top" secondItem="KH4-IR-CVc" secondAttribute="top" id="xUa-eO-zdB"/>
                             <constraint firstItem="KH4-IR-CVc" firstAttribute="bottom" secondItem="H1M-TR-gbN" secondAttribute="bottom" id="zLZ-hF-FGC"/>
@@ -136,12 +144,13 @@
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="dropZoneView" destination="9c9-WG-hgN" id="0Ae-yf-vfX"/>
+                        <outlet property="shadowView" destination="0un-16-oP2" id="NDX-PL-QmM"/>
                         <outlet property="tableView" destination="H1M-TR-gbN" id="LXr-hm-3HK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pvZ-L4-HU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2897.5999999999999" y="111.54422788605699"/>
+            <point key="canvasLocation" x="2896.8000000000002" y="111.0944527736132"/>
         </scene>
         <!--ImageCollectionViewController-->
         <scene sceneID="ESc-Au-OJE">
