--- a/Images/Images/Storyboards/ImageViewController.storyboard
+++ b/Images/Images/Storyboards/ImageViewController.storyboard
@@ -26,7 +26,7 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </imageView>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xIE-UK-YMh">
-                                        <rect key="frame" x="0.0" y="64" width="375" height="214"/>
+                                        <rect key="frame" x="0.0" y="84" width="375" height="194"/>
                                         <connections>
                                             <segue destination="4K1-Xf-mDH" kind="embed" id="md0-Rh-SFc"/>
                                         </connections>
@@ -42,16 +42,16 @@
                                     <constraint firstItem="xIE-UK-YMh" firstAttribute="leading" secondItem="6cP-V6-eD9" secondAttribute="leading" id="z8S-Ex-Igr"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="j0g-xs-tP2">
-                                <rect key="frame" x="167.5" y="20" width="40" height="40"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.90000000000000002" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flickr_logo" translatesAutoresizingMaskIntoConstraints="NO" id="j0g-xs-tP2">
+                                <rect key="frame" x="62.5" y="20" width="250" height="60"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="8L8-qv-mrP"/>
-                                    <constraint firstAttribute="height" constant="40" id="nuW-qU-X3S"/>
+                                    <constraint firstAttribute="width" constant="250" id="8L8-qv-mrP"/>
+                                    <constraint firstAttribute="height" constant="60" id="nuW-qU-X3S"/>
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelectionDuringEditing="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H1M-TR-gbN">
-                                <rect key="frame" x="0.0" y="286" width="375" height="332"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="286" width="375" height="381"/>
+                                <color key="backgroundColor" red="0.83807416820000002" green="0.8983499693" blue="0.92145264149999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="separatorColor" name="knobColor" catalog="System" colorSpace="catalog"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -115,7 +115,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.83807416820000002" green="0.8983499693" blue="0.92145264149999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="H1M-TR-gbN" firstAttribute="top" secondItem="9c9-WG-hgN" secondAttribute="bottom" id="1mX-Ag-kLB"/>
                             <constraint firstItem="0un-16-oP2" firstAttribute="top" secondItem="umi-wv-8HL" secondAttribute="top" id="3i5-Vx-13H"/>
@@ -136,12 +136,11 @@
                             <constraint firstItem="0un-16-oP2" firstAttribute="leading" secondItem="umi-wv-8HL" secondAttribute="leading" id="wB9-fx-9Qr"/>
                             <constraint firstItem="9c9-WG-hgN" firstAttribute="trailing" secondItem="KH4-IR-CVc" secondAttribute="trailing" id="wQ4-6u-Fj1"/>
                             <constraint firstItem="9c9-WG-hgN" firstAttribute="top" secondItem="KH4-IR-CVc" secondAttribute="top" id="xUa-eO-zdB"/>
-                            <constraint firstItem="KH4-IR-CVc" firstAttribute="bottom" secondItem="H1M-TR-gbN" secondAttribute="bottom" id="zLZ-hF-FGC"/>
+                            <constraint firstItem="H1M-TR-gbN" firstAttribute="bottom" secondItem="KH4-IR-CVc" secondAttribute="bottom" id="zLZ-hF-FGC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KH4-IR-CVc"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="more" id="BSE-e8-cd4"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBarItem key="tabBarItem" springLoaded="YES" systemItem="more" id="BSE-e8-cd4"/>
                     <connections>
                         <outlet property="dropZoneView" destination="9c9-WG-hgN" id="0Ae-yf-vfX"/>
                         <outlet property="shadowView" destination="0un-16-oP2" id="XDG-eY-aRE"/>
@@ -162,7 +161,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="150" height="126"/>
+        <image name="flickr_logo" width="960" height="480"/>
         <image name="space" width="520" height="612"/>
     </resources>
 </document>
