--- a/Images/Images/Storyboards/ImageCollectionViewController.storyboard
+++ b/Images/Images/Storyboards/ImageCollectionViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1XA-NL-6uK">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,36 +18,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MBE-B0-m9c">
-                            <size key="itemSize" width="283" height="175"/>
+                            <size key="itemSize" width="291" height="139"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" misplaced="YES" reuseIdentifier="imageCollectionView" id="nvR-CH-ANp" customClass="ImageCollectionViewCell" customModule="Images" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.5" width="283" height="175"/>
+                                <rect key="frame" x="0.0" y="18.5" width="291" height="139"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="283" height="175"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="291" height="139"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="267" placeholderIntrinsicHeight="152" translatesAutoresizingMaskIntoConstraints="NO" id="aY2-ec-WB0">
-                                            <rect key="frame" x="8" y="8" width="212" height="152"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="258" placeholderIntrinsicHeight="119" translatesAutoresizingMaskIntoConstraints="NO" id="aY2-ec-WB0">
+                                            <rect key="frame" x="15" y="15" width="261" height="119"/>
                                         </imageView>
                                         <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="MMV-n2-aI5">
-                                            <rect key="frame" x="123" y="72.5" width="37" height="37"/>
+                                            <rect key="frame" x="127" y="56" width="37" height="37"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="color" name="selectedKnobColor" catalog="System" colorSpace="catalog"/>
                                         </activityIndicatorView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vy0-xe-M5P">
+                                            <rect key="frame" x="261" y="0.0" width="30" height="30"/>
+                                            <state key="normal" title="❌">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="removeButtonTouch:" destination="1XA-NL-6uK" eventType="touchUpInside" id="uXy-0C-cJF"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="trailing" secondItem="nvR-CH-ANp" secondAttribute="trailingMargin" id="Uq7-eA-lZH"/>
-                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="top" secondItem="nvR-CH-ANp" secondAttribute="top" constant="8" id="adk-dR-oVY"/>
-                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="leading" secondItem="nvR-CH-ANp" secondAttribute="leading" constant="8" id="iqy-1M-xkv"/>
+                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="top" secondItem="nvR-CH-ANp" secondAttribute="top" constant="15" id="1Dd-85-ek9"/>
+                                    <constraint firstItem="aY2-ec-WB0" firstAttribute="leading" secondItem="nvR-CH-ANp" secondAttribute="leading" constant="15" id="93r-b7-aqA"/>
+                                    <constraint firstAttribute="trailing" secondItem="aY2-ec-WB0" secondAttribute="trailing" constant="15" id="JPF-JM-0ab"/>
+                                    <constraint firstItem="Vy0-xe-M5P" firstAttribute="top" secondItem="nvR-CH-ANp" secondAttribute="top" id="ZJ5-nd-84I"/>
+                                    <constraint firstAttribute="trailing" secondItem="Vy0-xe-M5P" secondAttribute="trailing" id="v33-zT-Dze"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="pictureImageView" destination="aY2-ec-WB0" id="4d6-cp-bSJ"/>
+                                    <outlet property="removeButton" destination="Vy0-xe-M5P" id="zTU-Ii-2N2"/>
                                     <outlet property="spinner" destination="MMV-n2-aI5" id="cgu-kh-tIa"/>
                                 </connections>
                             </collectionViewCell>
@@ -64,7 +77,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gdy-C0-ddI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3766.875" y="110.91549295774648"/>
+            <point key="canvasLocation" x="3765" y="109.85915492957747"/>
         </scene>
     </scenes>
 </document>
